# alpine

./: .gitignore  LICENSE  README.md  invalid_pyproject.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  documentation
alpine/: __init__.py
alpine/bio/: __init__.py  loaders.py
alpine/dataloaders/: __init__.py  bio.py  coordinate_datasets.py  env.py  signal_dataloaders.py
alpine/losses/: __init__.py  loss_functions.py
alpine/mesh/: __init__.py  utils.py
alpine/metrics/: ssim.py
alpine/models/: __init__.py  ffn.py  finer.py  fourier_reparam.py  fourier_reparametrized.py  gauss.py  siren.py  strainer.py  utils.py  wire.py
alpine/models/linear/: fourier_reparametrized.py
alpine/models/nonlin/: __init__.py  activation.py  nonlin.py  tracked_activation.py
alpine/trainers/: __init__.py  alpine_base.py  base.py  feature_extractor.py  meta.py  metalearn.py  pl.py
alpine/utils/: __init__.py  checkers.py  coords.py  functional.py  grid_search.py  volutils.py
alpine/vis/: __init__.py  clustering.py  neural_canvas.py  pca.py
alpine/vis/geometry/: __init__.py  local_complexity.py  partitions.py
build_docs/: build_docs.sh  conf.py  index.rst  references.bib
build_docs/_build/doctrees/: citation.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  indexlanding.doctree  installation.doctree  references.doctree
build_docs/_build/doctrees/sources/: alpine.dataloaders.doctree  alpine.doctree  alpine.losses.doctree  alpine.metrics.doctree  alpine.models.doctree  alpine.models.nonlin.doctree  alpine.trainers.doctree  alpine.utils.doctree  alpine.vis.doctree  alpine.vis.geometry.doctree  modules.doctree
build_docs/_build/html/: .buildinfo  citation.html  examples.html  objects.inv  searchindex.js
build_docs/_build/html/_sources/: citation.md.txt
build_docs/_build/html/sources/: alpine.losses.html  alpine.metrics.html  alpine.vis.html  modules.html
build_docs/sources/: alpine.dataloaders.rst
docs/: Makefile  alpine.dataloaders.rst  alpine.losses.html  alpine.models.html  alpine.models.nonlin.html  alpine.rst  conf.py  contributing.html  genindex.html  index.html  index.rst  indexlanding.html  installation.html  modules.html  py-modindex.html  references.bib  references.html  search.html
docs/_build/doctrees/: alpine.dataloaders.doctree  alpine.doctree  alpine.losses.doctree  alpine.models.doctree  alpine.models.nonlin.doctree  alpine.trainers.doctree  alpine.utils.doctree  alpine.vis.doctree  alpine.vis.geometry.doctree  citation.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  indexlanding.doctree  installation.doctree  modules.doctree  references.doctree  setup.doctree
docs/_build/doctrees/docs/: conf.doctree  modules.doctree
docs/_build/html/: .buildinfo  alpine.dataloaders.html  alpine.html  alpine.trainers.html  alpine.utils.html  alpine.vis.geometry.html  alpine.vis.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/sources/: alpine.dataloaders.html  alpine.html  alpine.models.html  alpine.models.nonlin.html  alpine.trainers.html  alpine.utils.html  alpine.vis.geometry.html
docs/sphinx_docs/: Makefile
examples/: distributed_training_using_lightning.py  ffn_using_dataloader.ipynb  finer_image.ipynb  fit_thai_statue_3d_distributed.py  fourier_reparametrization_2d.ipynb  gauss_image.ipynb  grid_search.ipynb  hyperspectral.ipynb  protein_structure_modelling.ipynb  representing_categorical_data_NLCD.ipynb  siren.ipynb  siren_audio.ipynb  siren_image.ipynb  strainer.ipynb  wire_ct_recon.ipynb
tests/: test_lazy_imports.py
tests/models/: ffn_test.py  finer_test.py  fourier_reparam_test.py  gauss_test.py  siren_test.py  strainer_test.py  wire_test.py
(+18 files in other folders)
