[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpine"
version = "1.0.0"
description = "A python package for working with INRs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Kushal Vyas", email = "kvyas@rice.edu" },
    { name = "Vishwanath Saragadam" },
    { name = "Ashok Veeraraghavan" },
    { name = "Guha Balakrishnan" },
]

dependencies = [
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "soundfile~=0.12.1",
    "lightning~=2.5.4",
    "torchmetrics~=1.8.2",
    "numpy>=1.23,<2.3",
    "scikit-image>=0.23.2",
    "scikit-learn~=1.7.2",
    "pandas~=2.3.2",
    "opencv-python~=4.12.0",
    "open3d~=0.19.0",
    "mcubes~=0.1.6",
    "tqdm~=4.67.1",
    "scipy~=1.15.3",
    "matplotlib~=3.10.6",
    "imageio~=2.37.0",
    "nibabel~=5.3.2",
    "biopandas~=0.5.1",
    "einops>=0.7.0",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://kushalvyas.github.io/alpine-docs/"
Repository = "https://github.com/kushalvyas/alpine.git"
Issues = "https://github.com/kushalvyas/alpine/issues"

[project.optional-dependencies]

[tool.setuptools.packages.find]
include = ["alpine*"]