[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpine"
version = "1.0.0"
description = "A python package for working with INRs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Kushal Vyas", email = "kvyas@rice.edu" },
    { name = "Vishwanath Saragadam" },
    { name = "Ashok Veeraraghavan" },
    { name = "Guha Balakrishnan" },
]

dependencies = [
    "torch>=2.8.0",
    "lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    "numpy>=1.23",
    "opencv-python>=4.0.0",
    "tqdm>=4.60.0",
    "scipy>=1.10.0",
    "matplotlib>=3.0.0",
    "imageio>=2.30.0",
    "einops>=0.7.0",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://kushalvyas.github.io/alpine-docs/"
Repository = "https://github.com/kushalvyas/alpine.git"
Issues = "https://github.com/kushalvyas/alpine/issues"

[project.optional-dependencies]
bio = [
    "nibabel>=5.0.0",
    "biopandas>=0.4.0",
    "pandas>=2.0.0",
]
mesh = [
    "open3d>=0.17.0",
    "mcubes>=0.1.0",
    "scikit-image>=0.23.0",
]
vis = [
    "scikit-learn>=1.0",
]
all = [
    "alpine[bio,mesh,vis]",
]
dev = [
    "pytest>=8.0.0",
    "flake8",
    "black",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
]

[tool.setuptools.packages.find]
include = ["alpine*"]